[DOC] thesis: add 1 more bibtem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -213,3 +213,18 @@ TODO: correct the place of publishing of Lele's B. S. Thesis.
   volume = 12,
   year = 1990
 }
+
+@article{journals/mz/Rademacher22,
+  year={1922},
+  issn={0025-5874},
+  journal={Mathematische Zeitschrift},
+  volume={13},
+  number={1},
+  doi={10.1007/BF01485279},
+  title={Über eine funktionale Ungleichung in der Theorie der konvexen Körper},
+  url={http://dx.doi.org/10.1007/BF01485279},
+  publisher={Springer-Verlag},
+  author={Rademacher, Hans},
+  pages={18-27},
+  language={German}
+}
