[DOC] thesis: continue writing det support theorem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1217,6 +1217,13 @@ $\{u_{1}, u_{2}\}$ (этого условия можно достичь прос
  \right] - h(u_{3}) \right) \geq 0
 \end{equation}
 
+где скалярная функция $\beta = \beta(u_{1}, u_{2}, u_{3})$ зависит только от
+набора чисел $u_{i}$. При этом если $u_{3}$ лежит в положительном конусе для
+$\{u_{1}, u_{2}\}$, то $\beta(u_{1}, u_{2}, u_{3}) \geq 0$, а если в
+отрицательном -- то $\beta(u_{1}, u_{2}, u_{3}) < 0$.
+
+Однако данные условия все еще являются глобальными, поскольку требуют проверки
+по всем возможным тройкам единичных векторов $(u_{1}, u_{2}, u_{3})$.
 
 
 \newpage
