--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1258,6 +1258,30 @@ $\{u_{1}, u_{2}\}$, то $\beta(u_{1}, u_{2}, u_{3}) \geq 0$, а если в
  \end{enumerate}
 \end{SmartTheorem}
 
+Точно так же, как и в плоском случае, можно показать, что последнее неравество
+эквивалентно следующему:
+
+\begin{equation}
+ u_{n + 1}^{T}
+ \left[
+ \begin{array}{c}
+ u_{1}^{T} \\
+ u_{2}^{T} \\
+ \vdots \\
+ u_{n}^{T} \\
+ \end{array}
+ \right]^{-1}
+ \left[
+ \begin{array}{c}
+ h(u_{1}) \\
+ h(u_{2}) \\
+ \vdots \\
+ h(u_{n}) \\
+ \end{array}
+ \right] - h(u_{n + 1}) \geq 0
+\end{equation}
+
+
 
 \newpage
 \section{Предлагаемый подход}
