[DOC] thesis: fix too small brackets in 1 formula

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -183,7 +183,9 @@ $u \in S_{2}$:
  \label{def:support-plane}
  \textbf{Приведенной опорной функцией} выпуклого тела $K$ называется следующая
 функция:
- \begin{equation}H_{K} (u) = h_{K} (\frac{u}{||u||})\end{equation}
+ \begin{equation}
+ H_{K} (u) = h_{K} \left(\frac{u}{||u||}\right)
+ \end{equation}
 \end{SmartDefinition}
 
 которая в действительности представляет собой расстояние от начала координат
