[DOC] thesis: add def of tuples classification

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1317,8 +1317,29 @@ $\{u_{1}, u_{2}\}$, то $\beta(u_{1}, u_{2}, u_{3}) \geq 0$, а если в
  -- полупространство, соответствующие опорному числу $h$ по направлению $u$.
 \end{SmartTheorem}
 
-Фактически последнее условие является обобщением геометрической интерпретации, 
-изображенной на рис. \ref{dicrete-radius-curvature}.
+Фактически последнее условие является обобщением геометрической интерпретации,
+изображенной на рис. \ref{dicrete-radius-curvature}. Недостаток данной теоремы
+с точки зрения приложений состоит в том, что условие должно быть проверено для
+всех возможных $(n + 1)$-поднаборов, т. е. оно не является \textit{локальным}.
+Вследствие этого авторы посвятили оставшуюся часть статьи сокращению числа
+условий, которые должны быть проверены. Главным результатом статьи
+является сокращение числа условий до того, что критерий становится
+локальным. Во-первых, проводится классификация $(n + 1)$-поднаборов:
+
+\begin{SmartDefinition}
+ \label{def:tuples-classifiction}
+ Пусть имеется набор $(u_{1}, u_{2}, \ldots, u_{n + 1})$ из $n + 1$ векторов в
+ $\mathbb{R}^{n}$. Тогда он называется
+ \begin{enumerate}
+  \item \textbf{конусно-положительным}, если один из векторов $u_{i}$
+  положительной конусной оболочке остальных.
+  \item \textbf{конусно-отрицательным}, если один из векторов $u_{i}$
+  отрицательной конусной оболочке остальных.
+  \item \textbf{конусно-нейтральным} -- в противном случае.
+ \end{enumerate}
+
+\end{SmartDefinition}
+
 
 
 \newpage
