[DOC] thesis: add local criterion of support vector

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1407,7 +1407,7 @@ u_{n}\}$
 
  Тогда если наборы опорных чисел 
  $\{h_{1}, \ldots, h_{n - 1}, h_{n + 1}, h_{n + 2}\}$ и
- $\{h_{2}, \ldots, h_{n}, h_{n + 1}, h_{n + 2}\}$ согласованы, тогда наборы
+ $\{h_{2}, \ldots, h_{n}, h_{n + 1}, h_{n + 2}\}$ согласованы, то и наборы
  $\{h_{1}, \ldots, h_{n}, h_{n + 1}\}$ и
  $\{h_{1}, \ldots, h_{n}, h_{n + 2}\}$ также являются согласованными.
 \end{SmartLemma}
@@ -1433,8 +1433,34 @@ u_{n}\}$
   u_{i_{2}}, \ldots, u_{i_{n}}\}$ содержит векторы $u_{k}, u_{i_{1}}, u_{i_{2}}, 
   \ldots, u_{i_{n}}$ и не содержит никаких других векторов из $\mathit{S}$.
  \end{enumerate}
-
 \end{SmartDefinition}
+
+Основным результатом статьи является следующая теорема, которая представляет
+собой локальный критерий согласованности набора опорных чисел:
+
+\begin{SmartTheorem}
+ \label{thm:local-global-consistency-equivalence}
+ \textbf{Локальный критерий набора опорных чисел в $\mathbb{R}^{n}$}.
+ Пусть имеется набор действительных чисел $h = (h_{1}, h_{2}, \ldots, h_{N})$ по
+ направлениям $u_{1}, u_{2}, \ldots, u_{N}$. Пусть выполнены следующие 
+ условия:
+ \begin{enumerate}
+  \item Пересечение всех соответствующих полупространств непусто:
+  \begin{equation}
+   \bigcap \limits_{i = 1}^{N} R(h_{i}, u_{i}) \neq \varnothing
+  \end{equation}
+  \item Для каждого конусно-положительного $(n + 1)$-поднабора конусная оболочка
+  является полной.
+ \end{enumerate}
+
+ Тогда данный набор является набором опорных чисел некоторого выпуклого тела в 
+ $\mathbb{R}^{n}$ тогда и только тогда, когда условие 
+ \ref{thm:support-function-criterio-ext:condition} из теоремы
+ \ref{thm:support-function-criterio-ext} выполняется для каждого направляющего
+ вектора $u_{k}$ опорные числа $\{h_{k}, h_{i_{1}}, \ldots, h_{i_{n}}\}$, 
+ соответствующие направлениям $\{u_{k}, u_{i_{1}}, \ldots, h_{u_{n}}\}$ из 
+ локального семейства $u_{k}$.
+\end{SmartTheorem}
 
 
 
