[DOC] thesis: split subsubsection about support vector criterion

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1329,9 +1329,14 @@ $\{u_{1}, u_{2}\}$, то $\beta(u_{1}, u_{2}, u_{3}) \geq 0$, а если в
 с точки зрения приложений состоит в том, что условие должно быть проверено для
 всех возможных $(n + 1)$-поднаборов, т. е. оно не является \textit{локальным}.
 Вследствие этого авторы посвятили оставшуюся часть статьи сокращению числа
-условий, которые должны быть проверены. Главным результатом статьи
-является сокращение числа условий до того, что критерий становится
-локальным. Во-первых, проводится классификация $(n + 1)$-поднаборов:
+условий, которые должны быть проверены.
+
+\subsubsection{Локальный критерий набора опорных чисел в $\mathbb{R}^{n}$}
+\label{sec:history/KarlKVW96/support-vector-criterion-local}
+
+Главным результатом статьи является сокращение числа условий до того, что 
+критерий становится локальным. Во-первых, проводится классификация $(n + 
+1)$-поднаборов:
 
 \begin{SmartDefinition}
  \label{def:tuples-classifiction}
