[DOC] thesis: finish KKVW article

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1467,8 +1467,23 @@ u_{n}\}$
  локального семейства $u_{k}$.
 \end{SmartTheorem}
 
+Таким образом, результаты Prince и Willsky из
+статьи \cite{journals/pami/PrinceW90}, который рассмотрен в разделе
+\ref{sec:history/PrinceW90}, можно расширить на случай задач произвольной
+размерности. Пусть $t = |\bigcup \limits_{i = 1}^{N} LF_{i}|$ - число элементов
+локальных семейств всех направлений (через $LF_{i}$ обозначено $i$-е локальное 
+семейство). Тогда можно сформулировать все те задачи минимизации, которые
+рассматривали Prince и Willsky, с тем лишь отличием, что вместо условия
+$Ch \leq 0$ должно быть использовано условие
 
+\begin{equation}
+ Q h \geq 0
+\end{equation}
 
+где $Q$ -- $t \times m$ матрица, составленная из коэффициентов линейных
+комбинаций условий согласованости для каждого набора из каждого локального
+семейства. При этом каждая строка этой матрицы содержит не более $n + 1$
+ненулевых коэффициентов.
 
 
 
