[DOC] thesis: add GK algorithm

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1485,6 +1485,54 @@ $Ch \leq 0$ должно быть использовано условие
 семейства. При этом каждая строка этой матрицы содержит не более $n + 1$
 ненулевых коэффициентов.
 
+\newpage
+\subsection{Алгоритм восстановления с квадратичным числом условий (по статье
+Gardner, Kiderlen)}
+
+Как это ни кажется странным, но алгоритм, основанный на наборе условий Karl,
+Kulkarni, Verghese, Willsky до сих пор не был реализован на практике. Gardner и
+Kiderlen в своей статье \cite{journals/pami/GardnerK09} объясняют это тем, что
+предложенные авторами условия слишком сложны. Это дало Gardner и Kiderlen 
+мотивацию для разработки нового алгоритма.
+
+Отличие от алгоритма Prince и Willsky заключается в том, что в качестве 
+переменных минимизации используются не опорные числа, а точки на опорных 
+плоскостях. А именно, производится минимизация функционала
+
+\begin{equation}
+ \min_{x_{1} \in \mathbb{R}^{n}, \ldots, x_{k} \in \mathbb{R}^{n}}
+ \sum \limits_{i = 1}^{k} (y_{i} - x_{i}^{T} u_{i})^{2}
+\end{equation}
+
+при следующих условиях согласованности:
+
+\begin{equation}
+ x_{j}^{T} u_{i} \leq x_{i}^{T} u_{i} \;\;\; 1 \leq i \neq j \leq k
+\end{equation}
+
+Ясно, что такой алгоритм выдает в результате некоторое тело
+$\widehat{P_{k}} = hull(\widehat{x_{1}}, \ldots, \widehat{x_{k}})$, которое
+вообще говоря не является главной целью набора опорных чисел $h_{i}$ (см. 
+определение \ref{def:basic-object}). Для того чтобы получить главную цель, 
+нужно вычислить опорные числа $h_{i} = \widehat{x_{i}}^{T} u_{i}$ и по ним уже 
+построить главную цель.
+
+Авторы также предлагают использовать линейную версию алгоритма, например, для
+построения первого приближения для квадратичного алгоритма:
+
+\begin{equation}
+ \min_{x_{1} \in \mathbb{R}^{n}, \ldots, x_{k} \in \mathbb{R}^{n}}
+ \sum \limits_{i = 1}^{k} (y_{i} - x_{i}^{T} u_{i})
+\end{equation}
+
+при тех же условиях согласованности.
+
+Недостаток данного пожхожа заключается в том, что число переменных
+увеличивается в $n$ раз, а число условий минимизации является квадратичным. Это
+приводит к тому, что время работы программы является огромным.
+
+
+
 
 
 \newpage
