[DOC] thesis: add 3 more bibitems

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -1,3 +1,18 @@
+@article{journals/jasa/FisherHTW1997,
+  author = {Fisher, Nicholas I. and Hall, Peter and Turlach, Berwin A. and
+  Watson, G. S.},
+  title = {On the Estimation of a Convex Set from Noisy Data on its Support
+  Function},
+  journal = {Journal of the American Statistical Association},
+  volume = {92},
+  number = {437},
+  pages = {84-91},
+  year = {1997},
+  doi = {10.1080/01621459.1997.10473605},
+  URL = {http://www.tandfonline.com/doi/abs/10.1080/01621459.1997.10473605},
+  eprint = {http://www.tandfonline.com/doi/pdf/10.1080/01621459.1997.10473605}
+}
+
 @article{journals/pami/GardnerK09,
   added-at = {2011-11-07T00:00:00.000+0100},
   author = {Gardner, Richard J. and Kiderlen, Markus},
@@ -73,6 +88,54 @@
   url = {http://dblp.uni-trier.de/db/journals/tit/tit52.html#GoldenshlugerS06},
   volume = 52,
   year = 2006
+}
+
+@inproceedings{conf/spie/GregorR2001,
+  author = {Gregor, Jens and Rannou, Fernando},
+  title = {Least-squares framework for projection MRI reconstruction},
+  journal = {Proc. SPIE},
+  volume = {4322},
+  number = {},
+  pages = {888-898},
+  abstract = {Magnetic resonance signals that have very short relaxation times
+  are conveniently sampled in a spherical fashion. We derive a least squares
+  framework for reconstructing three-dimensional source distribution images
+  from such data. Using a finite-series approach, the image is represented as a
+  weighted sum of translated Kaiser-Bessel window functions. The Radon
+  transform thereof establishes the connection with the projection data that
+  one can obtain from the radial sampling trajectories. The resulting linear
+  system of equations is sparse, but quite large. To reduce the size of the
+  problem, we introduce focus of attention. Based on the theory of support
+  functions, this data-driven preprocessing scheme eliminates equations and
+  unknowns that merely represent the background. The image reconstruction and
+  the focus of attention both require a least squares solution to be computed.
+  We describe a projected gradient approach that facilitates a non-negativity
+  constrained version of the powerful LSQR algorithm. In order to ensure
+  reasonable execution times, the least squares computation can be distributed
+  across a network of PCs and/or workstations. We discuss how to effectively
+  parallelize the NN-LSQR algorithm. We close by presenting results from
+  experimental work that addresses both computational issues and image quality
+  using a mathematical phantom.},
+  year = {2001},
+  doi = {10.1117/12.431168},
+  URL = { http://dx.doi.org/10.1117/12.431168},
+  eprint = {}
+}
+
+@article {journals/ijist/GregorR2002,
+  author = {Gregor, Jens and Rannou, Fernando R.},
+  title = {Three-dimensional support function estimation and application for
+  projection magnetic resonance imaging},
+  journal = {International Journal of Imaging Systems and Technology},
+  volume = {12},
+  number = {1},
+  publisher = {John Wiley & Sons, Inc.},
+  issn = {1098-1098},
+  url = {http://dx.doi.org/10.1002/ima.10007},
+  doi = {10.1002/ima.10007},
+  pages = {43--50},
+  keywords = {support function, projection imaging, magnetic resonance imaging},
+  year = {2002},
 }
 
 @article{journals/pami/HallT99,
