[DOC] thesis: begin GregorR2002

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1486,6 +1486,19 @@ $Ch \leq 0$ должно быть использовано условие
 ненулевых коэффициентов.
 
 \newpage
+\subsection{Применение методов построения оценок опорных функций к задачам
+магнитно-резонансной визуализации (по статьям Gregor и Rannou)}
+
+Алгоритмы оптимизации, предложенные Karl, Kulkarni, Verghese, Willsky в статье
+\cite{journals/jmiv/KarlKVW96}, как кажется, до сих пор еще не нашли применения
+в крупных производственных системах. Единственной известной на
+сегодняшний день попыткой является применение данного метода для построения
+оценки трехмерной опорно функции к задаче магнитно-резонансной визуализации,
+которое было произведено Gregor и Rannou. Результаты их работы были
+опубликованы в статье \cite{journals/ijist/GregorR2002} и в материалах
+конференции \cite{conf/spie/GregorR2001}.
+
+\newpage
 \subsection{Алгоритм восстановления с квадратичным числом условий (по статье
 Gardner, Kiderlen)}
 
