[DOC] thesis: add 3 defs in GregorR2002

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1496,7 +1496,45 @@ $Ch \leq 0$ должно быть использовано условие
 оценки трехмерной опорно функции к задаче магнитно-резонансной визуализации,
 которое было произведено Gregor и Rannou. Результаты их работы были
 опубликованы в статье \cite{journals/ijist/GregorR2002} и в материалах
-конференции \cite{conf/spie/GregorR2001}.
+конференции \cite{conf/spie/GregorR2001}. Здесь мы не будем описывать
+проблемы, специфичные для магнитно-резонансной визуализации, поскольку в
+конечном счете Gregor и Rannou свели свою задачу к аналогичным задачам,
+обсуждавшимся выше.
+
+\subsubsection{Тесты на согласованность}
+
+Авторы в данной работы сделали некоторые упрощения в выражениях типа
+\ref{thm:support-function-criterio-ext:condition}, используемых в качестве
+условий минимизации функционала. Повторим ряд введенных определений (здесь для 
+ясности и связи с контекстом текущей работы несколько видоизменили ряд 
+определений и обозначений).
+
+\begin{SmartDefinition}
+ \label{def:cone}
+ \textbf{Конусом} называется произвольная тройка векторов
+ $\{u_{1}, u_{2}, u_{3}\} \subset \mathbb{R}^{3}$.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ \label{def:full-cone}
+ Конус называется \textbf{полным}, если его векторы линейно независимы.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ \label{def:full-positive-cone}
+ \textbf{Положительным конусом} векторов $u_{1}, u_{2}, u_{3}$ называется
+ коническая оболочка этих векторов:
+
+ \begin{equation}
+  cone^{+}(u_{1}, u_{2}, u_{3}) =
+  \{x = \alpha_{1} u_{1} + \alpha_{2} u_{2} + \alpha_{3} u_{3}
+  \; | \; \alpha_{1} \geq 0, \alpha_{2} \geq 0, \alpha_{3} \geq 0\}
+ \end{equation}
+
+\end{SmartDefinition}
+
+
+
 
 \newpage
 \subsection{Алгоритм восстановления с квадратичным числом условий (по статье
