[DOC] thesis: add formulation of minimization problem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1559,6 +1559,34 @@ $Ch \leq 0$ должно быть использовано условие
  \end{equation}
 \end{SmartTheorem}
 
+Условия вида \ref{thm:criterion-gregor-rannou:condition} и будут образовывать
+условия минимизации. Проверить их все невозможно, поэтому авторы обратились к
+методам, предложенным в статье \cite{journals/jmiv/KarlKVW96} для снижения числа
+этих условий. А именно, в условия минимизации предлагается включать только те
+тесты, которые проверяют согласованность по локальным семействам (см. 
+определение \ref{def:local-family}).
+
+\subsubsection{Формулировка задачи минимизации}
+
+Пусть $t$ - общее число тестов на согласованность, которые необходимо проверить
+для доказательства согласованности набора опорных чисел по заданным 
+направлениям $u_{1}, u_{2}, \ldots, u_{N}$. Тогда обозначим матрицу $Q$ как
+$t \times N$ матрицу, составленную из коэффициентов отношений
+\ref{thm:criterion-gregor-rannou:condition}. Данная матрица является сильно
+разреженной, поскольку в каждой строке она содержит только 4 ненулевых элемента.
+Пусть $h^{0}$ - начальное приближение набора опорных чисел (т. е. полученное из
+эксперимента). Тогда ближайший к нему согласованный набор опорных чисел (в
+смысле евклидовой нормы) может быть найден как решение следующей задачи
+минимизации:
+
+\begin{equation}
+ \label{eq:gregor-rannou-algorithm}
+ h^{*} = \operatornamewithlimits{argmin}_{\{h \; | \; Q h \leq 0\}}
+ \frac{1}{2} ||h - h^{0}||^{2}
+\end{equation}
+
+В первую очередь авторы вычисляют матрицу $Q$ и дают представление об алгоритме,
+решающем поставленную задачу минимизации.
 
 
 
