[DOC] thesis: add 1 more bibitem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -1,3 +1,12 @@
+@book{books/BertsekasT1989,
+  author = {Bertsekas, Dimitri P. and Tsitsiklis, John N.},
+  title = {Parallel and Distributed Computation: Numerical Methods},
+  year = {1989},
+  isbn = {0-13-648700-9},
+  publisher = {Prentice-Hall, Inc.},
+  address = {Upper Saddle River, NJ, USA},
+}
+
 @article{journals/jasa/FisherHTW1997,
   author = {Fisher, Nicholas I. and Hall, Peter and Turlach, Berwin A. and
   Watson, G. S.},
