[DOC] thesis: add 1 more bibitem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -7,6 +7,16 @@
   address = {Upper Saddle River, NJ, USA},
 }
 
+@article{BierlaireTT1995,
+  author = {M. Bierlaire and Ph.L. Toint and D. Tuyttens},
+  title = {On Iterative Algorithms for Linear Least Squares Problems With 
+  Bound Constraints},
+  journal = {Linear Algebra Appl},
+  number = {143},
+  pages={111-143},
+  year = {1991}
+}
+
 @article{journals/jasa/FisherHTW1997,
   author = {Fisher, Nicholas I. and Hall, Peter and Turlach, Berwin A. and
   Watson, G. S.},
